feat: embedding service: refactor

--- a/embedding-service/Dockerfile
+++ b/embedding-service/Dockerfile
@@ -1,37 +1,48 @@
-# Base image
-FROM python:3.12-slim
+# Stage 1: Builder
+FROM python:3.12-slim AS builder
 
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=1
 
-# Install OS dependencies
+# Install build dependencies
 RUN apt-get update && apt-get install -y \
     git \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Create app directory
-WORKDIR /app
+# Create and activate virtual environment
+WORKDIR /src
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
-# Copy dependencies
-COPY requirements.txt .
+# Copy and install Python dependencies
+COPY requirements.txt ./
+RUN pip install --upgrade pip && pip install -r requirements.txt --extra-index-url https://buf.build/gen/python
 
-# Install dependencies
-RUN pip install --upgrade pip && pip install -r requirements.txt  --extra-index-url https://buf.build/gen/python
-
-# Copy app code
+# Copy application code
 COPY . .
 
-# Expose FastAPI default port
-EXPOSE 8000
 
-# Expose gRPC port
+# Stage 2: Runtime
+FROM python:3.12-slim AS runtime
+
+# Set environment variables for runtime
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    HF_HUB_DISABLE_PROGRESS_BARS=0
+
+# Copy virtual environment and app from builder
+COPY --from=builder /opt/venv /opt/venv
+COPY --from=builder /src /src
+
+WORKDIR /src
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Expose ports
+EXPOSE 8000
 EXPOSE 50051
 
-ENV HF_HUB_DISABLE_PROGRESS_BARS=0
-
-WORKDIR /
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Default command
+CMD ["python", "main.py"]
