--- a/embedding-service/docker-compose.yaml
+++ b/embedding-service/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   nats:
     image: nats:latest
@@ -7,7 +5,6 @@ services:
       - "4222:4222"
       - "8222:8222"
     command: "--cluster_name NATS -js --http_port 8222 "
-    networks: [ "nats" ]
 
   service:
     build: .
@@ -18,10 +15,7 @@ services:
       - ./app:/app
       - ${HOME}/.cache:/root/.cache  # Mount your laptop's model cache (e.g., HF/torch/transformers)
     environment:
-      - TRANSFORMERS_CACHE=/root/.cache/huggingface/transformers
+      - HF_HOME=/root/.cache/huggingface/
       - TORCH_HOME=/root/.cache/torch
+      - NATS_URL=nats://nats:4222
     restart: unless-stopped
-
-networks:
-  nats:
-    name: nats
