--- a/deploy/docker/traefik/traefik.yml
+++ b/deploy/docker/traefik/traefik.yml
@@ -10,3 +10,12 @@ providers:
 api:
   dashboard: true
   insecure: true
+
+
+accessLog: {}
+
+metrics:
+  prometheus:
+    addEntryPointsLabels: true
+    addServicesLabels: true
+    entryPoint: web
