--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -1,14 +1,14 @@
 include:
-  - auth-service/docker-compose.yaml
-  - embedding-service/docker-compose.yaml
-  - posts-service/docker-compose.yaml
+  - ../../auth-service/docker-compose.yaml
+  - ../../embedding-service/docker-compose.yaml
+  - ../../posts-service/docker-compose.yaml
 
 services:
   traefik:
     image: traefik:v3.4
     ports:
       - "7080:80"
-      - "17080:8080" # Traefik dashboard
+      - "17080:8080"
     volumes:
       - ./traefik/traefik.yml:/etc/traefik/traefik.yml:ro
       - ./traefik/dynamic.yml:/etc/traefik/dynamic.yml:ro
