--- a/posts-service/scylladb-compose-include.yaml
+++ b/posts-service/scylladb-compose-include.yaml
@@ -1,80 +1,84 @@
-version: "3"
+version: "3.8"
+
+x-scylla-common: &scylla-common
+  image: scylladb/scylla:6.1
+  command: >-
+    --seeds=scylla-node1,scylla-node2
+    --smp 2 --memory 1G --overprovisioned 1 --api-address 0.0.0.0
+  healthcheck:
+    test: ["CMD", "cqlsh", "-u", "cassandra", "-p", "cassandra", "-e", "DESCRIBE KEYSPACES"]
+    interval: 10s
+    timeout: 5s
+    retries: 10
+
+x-scylla-config-yaml: &scylla-config-yaml "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
+x-scylla-config-properties: &scylla-config-properties "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
 
 services:
-
   scylla-node1:
-    container_name: scylla-node1
-    image: scylladb/scylla:6.1
-    command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    <<: *scylla-common
     ports:
-      - "19042:9042"   # CQL
-      - "19100:10000"  # REST API
+      - "19042:9042"
+      - "19100:10000"
     volumes:
       - scylla-node1-data:/var/lib/scylla
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
-      - "./migrations:/migrations"
-    networks:
-      - scylla
+      - *scylla-config-yaml
+      - *scylla-config-properties
 
   scylla-node2:
-    container_name: scylla-node2
-    image: scylladb/scylla:6.1
-    command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    <<: *scylla-common
     ports:
       - "19043:9042"
       - "19101:10000"
     volumes:
       - scylla-node2-data:/var/lib/scylla
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
-    networks:
-      - scylla
+      - *scylla-config-yaml
+      - *scylla-config-properties
 
   scylla-node3:
-    container_name: scylla-node3
-    image: scylladb/scylla:6.1
-    command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    <<: *scylla-common
+    depends_on:
+      scylla-node1:
+        condition: service_healthy
+      scylla-node2:
+        condition: service_healthy
     ports:
       - "19044:9042"
       - "19102:10000"
     volumes:
       - scylla-node3-data:/var/lib/scylla
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
-    networks:
-      - scylla
+      - *scylla-config-yaml
+      - *scylla-config-properties
 
   scylla-node4:
-    container_name: scylla-node4
-    image: scylladb/scylla:6.1
-    command: --seeds=scylla-node1,scylla-node2,scylla-node3,scylla-node5 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    <<: *scylla-common
+    depends_on:
+      scylla-node1:
+        condition: service_healthy
+      scylla-node2:
+        condition: service_healthy
     ports:
       - "19045:9042"
       - "19103:10000"
     volumes:
       - scylla-node4-data:/var/lib/scylla
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
-    networks:
-      - scylla
+      - *scylla-config-yaml
+      - *scylla-config-properties
 
   scylla-node5:
-    container_name: scylla-node5
-    image: scylladb/scylla:6.1
-    command: --seeds=scylla-node1,scylla-node2 --smp 1 --memory 750M --overprovisioned 1 --api-address 0.0.0.0
+    <<: *scylla-common
+    depends_on:
+      scylla-node1:
+        condition: service_healthy
+      scylla-node2:
+        condition: service_healthy
     ports:
       - "19046:9042"
       - "19104:10000"
     volumes:
       - scylla-node5-data:/var/lib/scylla
-      - "./scylla/scylla.yaml:/etc/scylla/scylla.yaml"
-      - "./scylla/cassandra-rackdc.properties.dc1:/etc/scylla/cassandra-rackdc.properties"
-    networks:
-      - scylla
-networks:
-  scylla:
-    driver: bridge
+      - *scylla-config-yaml
+      - *scylla-config-properties
 
 volumes:
   scylla-node1-data:
