feat: embdding service: add reflection

--- a/embedding-service/Dockerfile
+++ b/embedding-service/Dockerfile
@@ -27,6 +27,16 @@ RUN --mount=type=cache,id=pip-cache,target=/root/.cache/pip \
 # Copy application code
 COPY . .
 
+ARG TARGETOS
+ARG TARGETARCH
+
+ARG GRPC_CURL_VERSION='1.9.3'
+ADD https://github.com/fullstorydev/grpcurl/releases/download/v${GRPC_CURL_VERSION}/grpcurl_${GRPC_CURL_VERSION}_${TARGETOS}_${TARGETARCH}.tar.gz /tmp/grpcurl.tar.gz
+RUN tar -xzf /tmp/grpcurl.tar.gz -C /tmp && \
+    mv /tmp/grpcurl /usr/local/bin/grpcurl && \
+    chmod +x /usr/local/bin/grpcurl && \
+    rm /tmp/grpcurl.tar.gz
+
 
 # Stage 2: Runtime
 FROM python:3.12-slim AS runtime
@@ -46,6 +56,20 @@ ENV PATH="/opt/venv/bin:$PATH"
 # Expose ports
 EXPOSE 8000
 EXPOSE 50051
+
+COPY --from=builder /usr/local/bin/grpcurl /usr/local/bin/grpcurl
+RUN chmod +x /usr/local/bin/grpcurl
+
+COPY healthcheck.sh /usr/local/bin/healthcheck.sh
+RUN chmod +x /usr/local/bin/healthcheck.sh
+
+HEALTHCHECK \
+  --interval=30s \
+  --start-interval=2s \
+  --timeout=3s \
+  --start-period=5s \
+  --retries=5 \
+  CMD /usr/local/bin/healthcheck.sh
 
 # Default command
 CMD ["python", "main.py"]
