--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -2,7 +2,7 @@ include:
   - ../../auth-service/docker-compose.yaml
   - ../../embedding-service/docker-compose.yaml
   - ../../posts-service/docker-compose.yaml
-
+  - ../../search-service/docker-compose.yaml
 services:
   traefik:
     image: traefik:v3.4
