--- a/deploy/docker/traefik/dynamic.yml
+++ b/deploy/docker/traefik/dynamic.yml
@@ -10,6 +10,11 @@ http:
       service: posts-service
       entryPoints:
         - web
+    search-router:
+      rule: "PathPrefix(`/search.v1.SearchService/`)"
+      service: search-service
+      entryPoints:
+        - web
   services:
     auth-service:
       loadBalancer:
@@ -25,3 +30,10 @@ http:
           - url: "h2c://posts-service-1:6080"
           - url: "h2c://posts-service-2:6080"
           - url: "h2c://posts-service-3:6080"
+    search-service:
+      loadBalancer:
+        servers:
+          # h2c = HTTP/2 without TLS
+          - url: "h2c://search-service-1:5080"
+          - url: "h2c://search-service-2:5080"
+          - url: "h2c://search-service-3:5080"
