--- a/.github/workflows/build-api-search.yml
+++ b/.github/workflows/build-api-search.yml
@@ -14,7 +14,10 @@ on:
       - '.github/workflows/_build.yml'
       - '.github/workflows/build-api-search.yml'
       - 'search-service/**'
-
+permissions:
+  contents: read
+  packages: write
+  
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
