--- a/.github/workflows/build-api-auth.yml
+++ b/.github/workflows/build-api-auth.yml
@@ -15,6 +15,10 @@ on:
       - '.github/workflows/build-api-auth.yml'
       - 'auth-service/**'
 
+permissions:
+  contents: read
+  packages: write
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
