--- a/.github/workflows/build-api-posts.yml
+++ b/.github/workflows/build-api-posts.yml
@@ -28,5 +28,5 @@ jobs:
     name: Build Service
     uses: ./.github/workflows/_build.yml
     with:
-      context: '.'
+      context: 'posts-service'
       service: 'posts-service'
