feat: likes service: add auth interceptor

--- a/likes-service/docker-compose.yaml
+++ b/likes-service/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
       REDIS_PASSWORD: likes_redis_pass
       PORT: 40051
       HOST: 0.0.0.0
+      JWKS_URL: 'http://auth-service-1:5080/auth/.well-known/jwks.json'
 
 volumes:
   redis_data:
