--- a/likes-service/package.json
+++ b/likes-service/package.json
@@ -10,6 +10,7 @@
     "@connectrpc/connect-fastify": "^2.0.2",
     "@connectrpc/connect-node": "^2.0.2",
     "@fastify/cors": "^11.0.1",
+    "@fastify/jwt": "^9.1.0",
     "@grpc/reflection": "^1.0.4",
     "acorn": "^8.14.1",
     "acorn-walk": "^8.3.4",
@@ -33,6 +34,8 @@
     "ioredis": "^5.6.1",
     "is-fullwidth-code-point": "^3.0.0",
     "jiti": "^2.4.2",
+    "jose": "^6.0.11",
+    "jwks-rsa": "^3.2.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.defaults": "^4.2.0",
     "lodash.isarguments": "^3.1.0",
