--- a/likes-service/package.json
+++ b/likes-service/package.json
@@ -12,6 +12,7 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/jwt": "^9.1.0",
     "@grpc/reflection": "^1.0.4",
+    "@nats-io/jetstream": "^3.0.2",
     "acorn": "^8.14.1",
     "acorn-walk": "^8.3.4",
     "ansi-regex": "^5.0.1",
@@ -42,6 +43,7 @@
     "long": "^5.3.2",
     "make-error": "^1.3.6",
     "ms": "^2.1.3",
+    "nats": "^2.29.3",
     "protobufjs": "^7.4.0",
     "redis-errors": "^1.2.0",
     "redis-parser": "^3.0.0",
