--- a/.github/workflows/build-api-embeddings.yml
+++ b/.github/workflows/build-api-embeddings.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*.*.*'
     paths:
       - '.github/workflows/_build.yml'
       - '.github/workflows/build-api-embeddings.yml'
