--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,13 @@ updates:
     directory: "/search-service"
     schedule:
       interval: "weekly"
+
+  - package-ecosystem: "pip"
+    directory: "/embedding-service"
+    schedule:
+      interval: "weekly"
+
+  - package-ecosystem: "npm"
+    directory: "/likes-service"
+    schedule:
+      interval: "weekly"
