--- a/embedding-service/requirements.txt
+++ b/embedding-service/requirements.txt
@@ -1,11 +1,11 @@
-aiohttp==3.11.18
+aiohttp==3.12.9
 aiosignal==1.3.2
 annotated-types==0.7.0
 attrs==25.3.0
 clip-anytorch==2.6.0
 frozenlist==1.6.0
 ftfy==6.3.1
-grpcio==1.72.0
+grpcio==1.72.1
 huggingface-hub==0.31.4
 multidict==6.4.4
 nats-py==2.10.0
@@ -23,5 +23,5 @@ yarl==1.20.0
 bufbuild-protovalidate-protocolbuffers-pyi==31.0.0.1.20250423154025+ec0af4932e5e
 bufbuild-protovalidate-protocolbuffers-python==31.0.0.1.20250423154025+ec0af4932e5e
 inspire_protobuf @ git+https://github.com/tech-inspire/api-contracts@11fa777355f0267caeb544a0bf55a53dfc6aedcc
-grpcio-reflection==1.72.0rc1
-grpcio-health-checking==1.72.0rc1
+grpcio-reflection==1.72.1
+grpcio-health-checking==1.72.1
